app/assets/stylesheets/page-header.css
.page-header {
  margin-bottom: 2rem;
}

.page-header__title {
  font-size: 1.6rem;
  font-weight: normal;
}

.page-content {
  padding: 1.25rem 0;
  min-height: 100%;
  width: 100%;
  box-sizing: border-box;
}

.page-content__title {
  font-size: 1.6rem;
  font-weight: normal;
  margin-bottom: 1rem;
  padding: 0 1rem;
}

.page-content__title--compact {
  padding: 0.75rem 1rem 0.25rem;
  margin-bottom: 0;
}

